changed flyout menu height calculation to fix bug on mobile devices when address bar is visible

--- a/src/sass/navigation/_drawer.scss
+++ b/src/sass/navigation/_drawer.scss
@@ -25,7 +25,7 @@ body {
 .flyout-menu {
 	visibility: hidden;
 	position: fixed;
-	height: var( --full-height );
+	height: calc( 100% - var( --admin-bar-height ) );
 	width: 100%;
 	max-width: $flyout-menu-max-width;
 	padding-bottom: $spacer-lg;
